<FrameLayout
    android:id="@+id/shootLyt"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="100">

        <LinearLayout
            android:id="@+id/camera_preview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"/>
        <TextView
            android:id="@+id/copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="100">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:orientation="vertical"
            android:weightSum="100">


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="85">

                <LinearLayout
                    android:id="@+id/camera_transparent_preview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"/>

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <Button
                        android:id="@+id/btnImage"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/btn_add"
                        android:text="@string/camera_image"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/memreas_btn_text_size"/>

                    <Button
                        android:id="@+id/btnVideo"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/btn_add"
                        android:text="@string/camera_video"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/memreas_btn_text_size"/>
                </LinearLayout>
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <ImageView
                        android:id="@+id/cameraThumbnail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="40"
                        android:src="@drawable/gallery_img"/>

                    <ImageView
                        android:id="@+id/recordBtn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="20"
                        android:src="@drawable/media_recording_start"/>

                    <TextView
                        android:id="@+id/recorderTimer"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="20"
                        android:text="@string/camera_timer"
                        android:textColor="@android:color/white"/>

                    <ImageView
                        android:id="@+id/cameraSwitch"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="20"
                        android:src="@drawable/blue_camera_back_icon"/>
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </FrameLayout>

    <include
        layout="@layout/loading"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"/>

</FrameLayout>